# Non-Maximum-Suppression

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  nms.h
.github/workflows/: cmake.yml
